--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "app.js",
+  "homepage": "https://github.com/wolfamit/Elephant-newsRactjs",
   "name": "news",
   "version": "0.1.0",
   "private": true,
